# qtube-dl

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qtube-dl.pro  qtube-dl_en.ts  qtube-dl_zh_TW.ts
